--- a/api-breakingnews/package.json
+++ b/api-breakingnews/package.json
@@ -10,6 +10,7 @@
   "author": "Josué Lustosa",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
